# Valhalla

./: .gitignore  CMakeLists.txt
buid/: CMakeCache.txt  Makefile  cmake_install.cmake
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: NetworkManager.hpp
shared/: Protocol.hpp
src/: client_main.cpp  server_main.cpp
src/Network/: NetworkManager.cpp  PacketDefinitions.h
